--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,24 +4,21 @@
   #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Bio
+  - name: Home
     url: /
     weight: 10
-  - name: Papers
-    url: /#papers
-    weight: 11
-  - name: Talks
-    url: /#talks
-    weight: 12
-  - name: News
-    url: /#news
-    weight: 13
-  - name: Experience
-    url: experience/
+  - name: Research
+    url: /#research
     weight: 20
-  - name: Projects
-    url: projects/
+  - name: Publications
+    url: /#publications
     weight: 30
-  - name: Courses
-    url: courses/
+  - name: Experience        # ← 추가
+    url: /experience
+    weight: 35
+  - name: Teaching
+    url: /#teaching
     weight: 40
+  - name: Contact
+    url: /contact
+    weight: 50
