--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -14,7 +14,7 @@ main:
     url: /#publications
     weight: 30
   - name: Teaching
-    url: /#teaching
+    url: /teaching
     weight: 40
   - name: Contact
     url: /contact
