--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: /
     weight: 10
   - name: Research
-    url: /#research
+    url: /research
     weight: 20
   - name: Publications
     url: /#publications
